Fix Dark Mode No Results Issue
When no card results appear on dark mode, the body background color does not change to the light blue, as the container does not exist. By changing the interface's min height to 100vh, this helps apply the correct styling under dark mode

--- a/src/components/Interface/interface.module.css
+++ b/src/components/Interface/interface.module.css
@@ -1,3 +1,6 @@
 .bg-dark-theme{
     background-color:hsl(207, 26%, 17%);
 }
+.min-height{
+    min-height:100vh; /*this is so that way, if there are no card results, dark mode still takes effect*/
+}
